Dump OPs usage statistic from ngraph unit tests

--- a/ngraph/test/util/CMakeLists.txt
+++ b/ngraph/test/util/CMakeLists.txt
@@ -27,6 +27,8 @@ set (SRC
     test_control.cpp
     visitor.hpp
     provenance_enabler.hpp
+    test_environment.hpp
+    test_environment.cpp
 )
 
 add_library(ngraph_test_util STATIC ${SRC})
@@ -42,6 +44,6 @@ if(NGRAPH_LIB_VERSIONING_ENABLE)
         VERSION ${NGRAPH_VERSION})
 endif()
 target_include_directories(ngraph_test_util PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/.. ${IE_MAIN_SOURCE_DIR}/include)
-target_link_libraries(ngraph_test_util PRIVATE ngraph ngraph_backend libgtest)
+target_link_libraries(ngraph_test_util PRIVATE ngraph ngraph_backend libgtest pugixml)
 
 install(TARGETS ngraph_test_util DESTINATION ${NGRAPH_INSTALL_LIB})
