--- a/ngraph/python/tox.ini
+++ b/ngraph/python/tox.ini
@@ -22,13 +22,14 @@ passenv =
   http_proxy
   https_proxy
 commands=
+  ls -alR /root/.onnx/model_zoo/MSFT
   {envbindir}/python setup.py bdist_wheel
   {envbindir}/pip install --no-index --pre --find-links=dist/ ngraph-core
   flake8 {posargs:src/ setup.py}
   flake8 --ignore=D100,D101,D102,D103,D104,D105,D107,W503 tests/  # ignore lack of docs in tests
   mypy --config-file=tox.ini {posargs:src/}
   pytest --backend={env:NGRAPH_BACKEND} tests -v -n 16 -k 'not _cuda' --ignore=tests/test_onnx/test_zoo_models.py
-  pytest --backend={env:NGRAPH_BACKEND} tests/test_onnx/test_zoo_models.py -v -n 16 -k 'not _cuda' --model_zoo_xfail
+  pytest --backend={env:NGRAPH_BACKEND} tests/test_onnx/test_zoo_models.py -v -n 16 -k 'not _cuda'
 
 [testenv:devenv]
 envdir = devenv
