Using BUILD_SHARED_LIBS (defaulted to ON) instead of a custom CMake option NGRAPH_STATIC_LIBRARY

--- a/ngraph/CMakeLists.txt
+++ b/ngraph/CMakeLists.txt
@@ -124,7 +124,6 @@ option(NGRAPH_ADDRESS_SANITIZER_ENABLE "Compiles and links with Address Sanitize
 option(NGRAPH_THREAD_SANITIZER_ENABLE "Compiles and links with Thread Sanitizer" FALSE)
 option(NGRAPH_UB_SANITIZER_ENABLE "Compiles and links with Undefined Behavior Sanitizer" FALSE)
 option(NGRAPH_USE_PROTOBUF_LITE "Compiles and links with protobuf-lite" FALSE)
-option(NGRAPH_STATIC_LIBRARY "Compiles ngraph as a static library" FALSE)
 
 if (NGRAPH_ONNX_IMPORT_ENABLE)
     option(NGRAPH_USE_SYSTEM_PROTOBUF "Use system provided Protobuf shared object" FALSE)
@@ -162,7 +161,6 @@ NORMALIZE_BOOL(NGRAPH_ADDRESS_SANITIZER_ENABLE)
 NORMALIZE_BOOL(NGRAPH_THREAD_SANITIZER_ENABLE)
 NORMALIZE_BOOL(NGRAPH_UB_SANITIZER_ENABLE)
 NORMALIZE_BOOL(NGRAPH_USE_PROTOBUF_LITE)
-NORMALIZE_BOOL(NGRAPH_STATIC_LIBRARY)
 
 message(STATUS "NGRAPH_ADDRESS_SANITIZER_ENABLE:      ${NGRAPH_ADDRESS_SANITIZER_ENABLE}")
 message(STATUS "NGRAPH_CODE_COVERAGE_ENABLE:          ${NGRAPH_CODE_COVERAGE_ENABLE}")
@@ -181,7 +179,6 @@ message(STATUS "NGRAPH_UB_SANITIZER_ENABLE:           ${NGRAPH_UB_SANITIZER_ENAB
 message(STATUS "NGRAPH_USE_PROTOBUF_LITE:             ${NGRAPH_USE_PROTOBUF_LITE}")
 message(STATUS "NGRAPH_UNIT_TEST_ENABLE:              ${NGRAPH_UNIT_TEST_ENABLE}")
 message(STATUS "NGRAPH_WARNINGS_AS_ERRORS:            ${NGRAPH_WARNINGS_AS_ERRORS}")
-message(STATUS "NGRAPH_STATIC_LIBRARY:                ${NGRAPH_STATIC_LIBRARY}")
 
 set(NGRAPH_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD ${NGRAPH_CXX_STANDARD})
@@ -483,7 +480,7 @@ if (NGRAPH_EXPORT_TARGETS_ENABLE)
     set(NGRAPH_TARGETS_FILE "${CMAKE_CURRENT_BINARY_DIR}/ngraphTargets.cmake")
     export(TARGETS ngraph NAMESPACE ngraph:: FILE "${NGRAPH_TARGETS_FILE}")
 
-    if(NOT NGRAPH_STATIC_LIBRARY)
+    if(BUILD_SHARED_LIBS)
         install(EXPORT ngraphTargets
             FILE ngraphTargets.cmake
             NAMESPACE ngraph::
