Add CMake install rules for OpenVINO 3rd party dependencies
Remove unwanted targets from final distribution (test, static libs, etc)

--- a/inference-engine/samples/CMakeLists.txt
+++ b/inference-engine/samples/CMakeLists.txt
@@ -123,7 +123,7 @@ set (INTTYPES_FORMAT C99)
 set (BUILD_TESTING OFF)
 
 if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/gflags")
-    add_subdirectory(thirdparty/gflags)
+    add_subdirectory(thirdparty/gflags EXCLUDE_FROM_ALL)
     set_target_properties(gflags_nothreads_static PROPERTIES FOLDER thirdparty)
 endif()
 
