Made protobuf and gtest from ngraph always static. Factorized all the force static logic for ngraph's externals in ngraph's CMakeLists.txt instead of external_*.cmake

--- a/ngraph/CMakeLists.txt
+++ b/ngraph/CMakeLists.txt
@@ -454,6 +454,11 @@ if(NOT DEFINED EXTERNAL_PROJECTS_ROOT)
     set(EXTERNAL_PROJECTS_ROOT ${CMAKE_CURRENT_BINARY_DIR})
 endif()
 
+function(include_as_static file)
+    set(BUILD_SHARED_LIBS OFF)
+    include(${file})
+endfunction()
+
 if (NGRAPH_ONNX_IMPORT_ENABLE)
     if (MSVC)
         # When we build dll libraries. These flags make sure onnx and protobuf build with /MD, not /MT.
@@ -463,11 +468,11 @@ if (NGRAPH_ONNX_IMPORT_ENABLE)
         set(protobuf_MSVC_STATIC_RUNTIME OFF CACHE BOOL "Link protobuf to static runtime libraries" FORCE)
     endif()
     if (NOT NGRAPH_USE_SYSTEM_PROTOBUF)
-        include(cmake/external_protobuf.cmake)
+        include_as_static(cmake/external_protobuf.cmake)
     else()
         find_package(Protobuf 2.6.1 REQUIRED)
     endif()
-    include(cmake/external_onnx.cmake)
+    include_as_static(cmake/external_onnx.cmake)
     if (TARGET ext_protobuf)
         add_dependencies(onnx ext_protobuf)
     endif()
@@ -505,7 +510,7 @@ endif()
 add_subdirectory(frontend)
 
 if (NGRAPH_TEST_UTIL_ENABLE)
-    include(cmake/external_gtest.cmake)
+    include_as_static(cmake/external_gtest.cmake)
 endif()
 
 add_subdirectory(test)
