One mre draft patch
Signed-off-by: Alexander Peskov <alexander.peskov@intel.com>

--- a/inference-engine/src/mkldnn_plugin/CMakeLists.txt
+++ b/inference-engine/src/mkldnn_plugin/CMakeLists.txt
@@ -15,7 +15,7 @@ endif()
 set(LAYERS
     ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_batchnorm_node.cpp
 #    ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_bin_conv_node.cpp
-#    ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_concat_node.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_concat_node.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_conv_node.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_crop_node.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_deconv_node.cpp
@@ -35,7 +35,7 @@ set(LAYERS
 #    ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_rnn.cpp
 #    ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_roi_pooling_node.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_softmax_node.cpp
-#    ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_split_node.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_split_node.cpp
 #    ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_tensoriterator_node.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_tile_node.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/nodes/mkldnn_mvn_node.cpp
@@ -236,6 +236,15 @@ target_include_directories(${TARGET_NAME}_obj PRIVATE
         $<TARGET_PROPERTY:mkldnn,INTERFACE_INCLUDE_DIRECTORIES>
         $<TARGET_PROPERTY:mkldnn,INCLUDE_DIRECTORIES>
 )
+
+## to use internal API headers of MKLDNN
+target_include_directories(${TARGET_NAME}_obj PRIVATE
+        $<TARGET_PROPERTY:mkldnn,INCLUDE_DIRECTORIES>
+        ${IE_MAIN_SOURCE_DIR}/thirdparty/mkl-dnn/src/cpu       ## |
+        ${IE_MAIN_SOURCE_DIR}/thirdparty/mkl-dnn/src/cpu/x64   ## | TODO: Should be available via oneDNN target
+        ${IE_MAIN_SOURCE_DIR}/thirdparty/mkl-dnn/src/common    ## |
+)
+
 
 target_compile_definitions(${TARGET_NAME}_obj
         PUBLIC -DMKLDNN_THR=${MKLDNN_THR}
