Solving cross compilation from Debian 9

--- a/ngraph/CMakeLists.txt
+++ b/ngraph/CMakeLists.txt
@@ -469,7 +469,11 @@ if (NGRAPH_ONNX_IMPORT_ENABLE)
         set(protobuf_MSVC_STATIC_RUNTIME OFF CACHE BOOL "Link protobuf to static runtime libraries" FORCE)
     endif()
     if (NOT NGRAPH_USE_SYSTEM_PROTOBUF)
-        include_as_static(cmake/external_protobuf.cmake)
+        set(BEFORE_PROTOBUF_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
+        set(BUILD_SHARED_LIBS OFF)
+        include(cmake/external_protobuf.cmake)
+        set(BUILD_SHARED_LIBS ${BEFORE_PROTOBUF_BUILD_SHARED_LIBS})
+        unset(BEFORE_PROTOBUF_BUILD_SHARED_LIBS)
     else()
         find_package(Protobuf 2.6.1 REQUIRED)
     endif()
