using the same pattern for other ngraph externals

--- a/ngraph/CMakeLists.txt
+++ b/ngraph/CMakeLists.txt
@@ -455,11 +455,6 @@ if(NOT DEFINED EXTERNAL_PROJECTS_ROOT)
     set(EXTERNAL_PROJECTS_ROOT ${CMAKE_CURRENT_BINARY_DIR})
 endif()
 
-function(include_as_static file)
-    set(BUILD_SHARED_LIBS OFF)
-    include(${file})
-endfunction()
-
 if (NGRAPH_ONNX_IMPORT_ENABLE)
     if (MSVC)
         # When we build dll libraries. These flags make sure onnx and protobuf build with /MD, not /MT.
@@ -468,19 +463,20 @@ if (NGRAPH_ONNX_IMPORT_ENABLE)
         set(protobuf_WITH_ZLIB  OFF CACHE BOOL "" FORCE)
         set(protobuf_MSVC_STATIC_RUNTIME OFF CACHE BOOL "Link protobuf to static runtime libraries" FORCE)
     endif()
+
+    set(BEFORE_ONNX_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
+    set(BUILD_SHARED_LIBS OFF)
     if (NOT NGRAPH_USE_SYSTEM_PROTOBUF)
-        set(BEFORE_PROTOBUF_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
-        set(BUILD_SHARED_LIBS OFF)
         include(cmake/external_protobuf.cmake)
-        set(BUILD_SHARED_LIBS ${BEFORE_PROTOBUF_BUILD_SHARED_LIBS})
-        unset(BEFORE_PROTOBUF_BUILD_SHARED_LIBS)
     else()
         find_package(Protobuf 2.6.1 REQUIRED)
     endif()
-    include_as_static(cmake/external_onnx.cmake)
+    include(cmake/external_onnx.cmake)
     if (TARGET ext_protobuf)
         add_dependencies(onnx ext_protobuf)
     endif()
+    set(BUILD_SHARED_LIBS ${BEFORE_ONNX_BUILD_SHARED_LIBS})
+    unset(BEFORE_ONNX_BUILD_SHARED_LIBS)
 endif()
 
 add_subdirectory(core)
@@ -515,7 +511,11 @@ endif()
 add_subdirectory(frontend)
 
 if (NGRAPH_TEST_UTIL_ENABLE)
-    include_as_static(cmake/external_gtest.cmake)
+    set(BEFORE_GTEST_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
+    set(BUILD_SHARED_LIBS OFF)
+    include(cmake/external_gtest.cmake)
+    set(BUILD_SHARED_LIBS ${BEFORE_GTEST_BUILD_SHARED_LIBS})
+    unset(BEFORE_GTEST_BUILD_SHARED_LIBS)
 endif()
 
 add_subdirectory(test)
