--- a/openvino/cc/CMakeLists.txt
+++ b/openvino/cc/CMakeLists.txt
@@ -14,8 +14,23 @@
 # limitations under the License.
 # ******************************************************************************
 
-add_subdirectory(itt)
-add_subdirectory(cc)
+set(TARGET_NAME cc)
 
-openvino_developer_export_targets(openvino::itt)
-openvino_developer_export_targets(openvino::cc)
+add_library(${TARGET_NAME} INTERFACE)
+
+add_library(openvino::cc ALIAS ${TARGET_NAME})
+
+target_link_libraries(${TARGET_NAME} INTERFACE openvino::itt)
+
+target_include_directories(${TARGET_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+if(${ENABLE_SUBSET} STREQUAL "ANALYZE")
+    target_compile_definitions(${TARGET_NAME} INTERFACE -DENABLE_SUBSET_FIND)
+elseif(${ENABLE_SUBSET} STREQUAL "ON")
+    target_compile_definitions(${TARGET_NAME} INTERFACE -DENABLE_SUBSET)
+    if(MSVC)
+        target_compile_options(${TARGET_NAME} INTERFACE /FI"${SUBSET_DEFS}")
+    else()
+        target_compile_options(${TARGET_NAME} INTERFACE -include "${SUBSET_DEFS}")
+    endif()
+endif()
