--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -64,6 +64,11 @@ jobs:
     displayName: 'Start IncrediBuild'
 
   - script: |
+      echo Stop IncrediBuild_Agent && net stop IncrediBuild_Agent
+      reg add HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Xoreax\IncrediBuild\BuildService /f /v ibat /d 1 && echo Start IncrediBuild_Agent && net start IncrediBuild_Agent
+    displayName: 'Start IncrediBuild'
+
+  - script: |
       set PATH=$(WORK_DIR)\ninja-win;%PATH%
       call "$(MSVS_VARS_PATH)" && cmake -GNinja -DCMAKE_BUILD_TYPE=$(BUILD_TYPE) -DENABLE_TESTS=ON -DCMAKE_C_COMPILER:PATH="$(MSVC_COMPILER_PATH)" -DCMAKE_CXX_COMPILER:PATH="$(MSVC_COMPILER_PATH)" $(REPO_DIR)
     workingDirectory: $(BUILD_DIR)
