Update windows.yml for Azure Pipelines

--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -76,7 +76,7 @@ jobs:
 
   - script: |
       set PATH=$(WORK_DIR)\ninja-win;%PATH%
-      call "$(MSVS_VARS_PATH)" && "C:\Program Files (x86)\IncrediBuild\BuildConsole.exe" /COMMAND="ninja" /MaxCPUS=40
+      call "$(MSVS_VARS_PATH)" && "C:\Program Files (x86)\IncrediBuild\BuildConsole.exe" /COMMAND="ninja -j48" /MaxCPUS=40
     workingDirectory: $(BUILD_DIR)
     displayName: 'Build Win'
 
