--- a/inference-engine/tests/ie_test_utils/functional_test_utils/CMakeLists.txt
+++ b/inference-engine/tests/ie_test_utils/functional_test_utils/CMakeLists.txt
@@ -4,8 +4,14 @@
 
 set(TARGET_NAME funcTestUtils)
 
-list(APPEND EXPORT_DEPENDENCIES inference_engine_lp_transformations
-    commonTestUtils inference_engine inference_engine_legacy)
+list(APPEND EXPORT_DEPENDENCIES
+        inference_engine_lp_transformations
+        commonTestUtils
+        inference_engine
+        inference_engine_legacy
+        ngraphFunctions
+        inference_engine_transformations
+        )
 
 addIeTarget(
     NAME ${TARGET_NAME}
@@ -13,7 +19,17 @@ addIeTarget(
     ROOT ${CMAKE_CURRENT_SOURCE_DIR}
     ADD_CPPLINT
     DEVELOPER_PACKAGE
-    LINK_LIBRARIES ngraphFunctions
+    LINK_LIBRARIES
+        PUBLIC
+            ${EXPORT_DEPENDENCIES}
+    INCLUDES
+        PUBLIC
+            $<TARGET_PROPERTY:inference_engine_plugin_api,INTERFACE_INCLUDE_DIRECTORIES>
+#    LINK_FLAGS
+#        PUBLIC
+#        IR_SERIALIZATION_MODELS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/ir_serialization/models/"
+    DEPENDENCIES
+        ${EXPORT_DEPENDENCIES}
     EXPORT_DEPENDENCIES ${EXPORT_DEPENDENCIES}
 )
 
@@ -21,7 +37,5 @@ ie_faster_build(${TARGET_NAME}
     PCH PRIVATE "precomp.hpp"
 )
 
-target_include_directories(${TARGET_NAME} PUBLIC
-    $<TARGET_PROPERTY:inference_engine_plugin_api,INTERFACE_INCLUDE_DIRECTORIES>)
-
-target_link_libraries(${TARGET_NAME} PUBLIC ${EXPORT_DEPENDENCIES} inference_engine_transformations)
+# ir serialization functional tests variables
+target_compile_definitions(${TARGET_NAME} INTERFACE IR_SERIALIZATION_MODELS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/ir_serialization_models/")
