--- a/inference-engine/tests/ie_test_utils/functional_test_utils/CMakeLists.txt
+++ b/inference-engine/tests/ie_test_utils/functional_test_utils/CMakeLists.txt
@@ -9,8 +9,6 @@ list(APPEND EXPORT_DEPENDENCIES
         commonTestUtils
         inference_engine
         inference_engine_legacy
-        ngraphFunctions
-        inference_engine_transformations
         )
 
 addIeTarget(
@@ -22,12 +20,13 @@ addIeTarget(
     LINK_LIBRARIES
         PUBLIC
             ${EXPORT_DEPENDENCIES}
+            ngraphFunctions
+            inference_engine_transformations
     INCLUDES
         PUBLIC
             $<TARGET_PROPERTY:inference_engine_plugin_api,INTERFACE_INCLUDE_DIRECTORIES>
-    DEPENDENCIES
+    EXPORT_DEPENDENCIES
         ${EXPORT_DEPENDENCIES}
-    EXPORT_DEPENDENCIES ${EXPORT_DEPENDENCIES}
 )
 
 ie_faster_build(${TARGET_NAME}
