--- a/inference-engine/ie_bridges/c/samples/common/opencv_c_wraper/CMakeLists.txt
+++ b/inference-engine/ie_bridges/c/samples/common/opencv_c_wraper/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 file(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
 
 # create library
-add_library(${TARGET_NAME} SHARED ${HEADERS} ${SOURCES})
+add_library(${TARGET_NAME} ${HEADERS} ${SOURCES})
 
 # Find OpenCV components if exist
 find_package(OpenCV COMPONENTS imgcodecs videoio  QUIET)
