--- a/inference-engine/samples/common/format_reader/CMakeLists.txt
+++ b/inference-engine/samples/common/format_reader/CMakeLists.txt
@@ -18,7 +18,7 @@ source_group("src" FILES ${LIBRARY_SRC})
 source_group("include" FILES ${LIBRARY_HEADERS})
 
 # Create library file from sources.
-add_library(${TARGET_NAME} SHARED ${MAIN_SRC} ${LIBRARY_HEADERS})
+add_library(${TARGET_NAME} ${MAIN_SRC} ${LIBRARY_HEADERS})
 
 # Find OpenCV components if exist
 find_package(OpenCV COMPONENTS imgcodecs videoio imgproc QUIET)
