--- a/inference-engine/src/readers/ir_reader/CMakeLists.txt
+++ b/inference-engine/src/readers/ir_reader/CMakeLists.txt
@@ -12,9 +12,9 @@ file(GLOB_RECURSE LIBRARY_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
 
 source_group("src" FILES ${LIBRARY_SRC})
 
-# Create shared library
+# Create shared or static library
 
-add_library(${TARGET_NAME} SHARED ${LIBRARY_SRC})
+add_library(${TARGET_NAME} ${LIBRARY_SRC})
 
 ie_faster_build(${TARGET_NAME}
     UNITY
