--- a/inference-engine/src/readers/ir_reader_v7/CMakeLists.txt
+++ b/inference-engine/src/readers/ir_reader_v7/CMakeLists.txt
@@ -14,9 +14,9 @@ list(APPEND LIBRARY_SRC ${IE_MAIN_SOURCE_DIR}/src/readers/ir_reader/ie_ir_reader
 
 source_group("src" FILES ${LIBRARY_SRC})
 
-# Create shared library
+# Create shared or static library
 
-add_library(${TARGET_NAME} SHARED ${LIBRARY_SRC})
+add_library(${TARGET_NAME} ${LIBRARY_SRC})
 
 ie_faster_build(${TARGET_NAME}
     UNITY
