--- a/inference-engine/tests/ie_test_utils/unit_test_utils/mocks/mock_engine/CMakeLists.txt
+++ b/inference-engine/tests/ie_test_utils/unit_test_utils/mocks/mock_engine/CMakeLists.txt
@@ -23,7 +23,7 @@ source_group("src" FILES ${LIBRARY_SRC})
 source_group("include" FILES ${LIBRARY_HEADERS})
 
 # Create library file from sources.
-add_library(${TARGET_NAME} SHARED
+add_library(${TARGET_NAME}
             ${LIBRARY_SRC}
             ${LIBRARY_HEADERS})
 
