--- a/ngraph/test/util/CMakeLists.txt
+++ b/ngraph/test/util/CMakeLists.txt
@@ -44,4 +44,8 @@ endif()
 target_include_directories(ngraph_test_util PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/.. ${IE_MAIN_SOURCE_DIR}/include)
 target_link_libraries(ngraph_test_util PRIVATE ngraph ngraph_backend libgtest)
 
+if (NOT BUILD_SHARED_LIBS)
+    target_compile_definitions(ngraph_test_util PRIVATE USE_STATIC_IE)
+endif()
+
 install(TARGETS ngraph_test_util DESTINATION ${NGRAPH_INSTALL_LIB})
