--- a/inference-engine/tests/ngraph_functions/CMakeLists.txt
+++ b/inference-engine/tests/ngraph_functions/CMakeLists.txt
@@ -9,6 +9,7 @@ list(APPEND EXPORT_DEPENDENCIES
         ngraph_backend
         interpreter_backend
         inference_engine_lp_transformations
+        inference_engine_legacy
         )
 
 set(PUBLIC_HEADERS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
@@ -17,10 +18,14 @@ addIeTarget(
         NAME ${TARGET_NAME}
         TYPE STATIC
         ROOT ${PUBLIC_HEADERS_DIR}
+        INCLUDES
+            PUBLIC
+                ${PUBLIC_HEADERS_DIR}
         ADDITIONAL_SOURCE_DIRS
             ${CMAKE_CURRENT_SOURCE_DIR}/src
         LINK_LIBRARIES
-            funcTestUtils
+            PUBLIC
+                ${EXPORT_DEPENDENCIES}
         ADD_CPPLINT
         DEVELOPER_PACKAGE
         EXPORT_DEPENDENCIES
@@ -31,7 +36,3 @@ ie_faster_build(${TARGET_NAME}
     UNITY
     PCH PRIVATE "src/precomp.hpp"
 )
-
-target_include_directories(${TARGET_NAME} PUBLIC ${PUBLIC_HEADERS_DIR})
-
-target_link_libraries(${TARGET_NAME} PUBLIC ${EXPORT_DEPENDENCIES})
